djangoproject/scss/_style.scss
/* ... */
footer {
    // Global Footer at bottom of page
    @include clearfix;
    @include sans-serif;
    position: relative;
    background: var(--primary);
    clear: both;
    margin-top: 0px;

    .container {
        overflow: hidden;
    }

    .subfooter {
        @include clearfix;
        padding: 0 10px;

        @include respond-min(768px) {
            padding: 0;
        }

        .col {
            &:first-child {
                h2 {
                    border-top: 0;
                }
            }

            @include respond-min(768px) {
                float: left;
                margin-bottom: -999px;
                padding: 0 3% 999px 0;
                width: 23%;
            }

            &:first-child {
                margin-left: 0;
                padding-left: 0;
            }

            &.last-child {
                margin-right: 0;
                padding-right: 0;
            }
        }

    }

    h3 {
        @include font-size(16);
        border-top: 1px solid var(--hairline-color);
        color: var(--menu);
        font-weight: 700;
        margin-top: 20px;
        padding: 30px 0 10px;

        @include respond-min(768px) {
            border: none;
            margin-top: 0;
        }
    }

    ul {
        @include font-size(14);
        font-weight: 400;
        list-style: none;
        margin: 15px 0 0 0;
        padding: 0 0 30px;

        li {
            margin: 10px 0 0;
            padding: 0;
        }

        a {
            color: var(--menu);
            text-decoration: none;

            &:visited {
              color: var(--menu);
            }

            &:hover,
            &:active,
            &:focus {
                text-decoration: underline;
                color: var(--menu);
            }
        }
    }

    .footer {
        background: $green-dark;
        margin-top: 20px;
        padding: 10px 0 30px;
        color: var(--primary-accent);

        .footer-logo {
            float: left;
            width: 33%;
        }

        .logo {
            background-position: left center;
            margin-right: 0;
            margin-top: 20px;

            &:focus {
                outline: 2px solid var(--menu);
            }
        }
    }

    .logo {
        @include font-size(40);
        @include sans-serif;
        background: url(../img/logo-django.svg) center center no-repeat;
        color: $green-dark;
        display: block;
        font-weight: 700;
        height: 39px;
        margin: 10px;
        overflow: hidden;
        text-decoration: none;
        text-indent: 100%;
        width: 109px;

        @include respond-min(768px) {
            float: left;
            margin: 20px 90px 0 0;
        }
    }

    .thanks {
        @include font-size(12);
        color: var(--primary-accent);
        margin: 0;
        padding: 0;

        @include respond-min(768px) {
            border: none;
        }

        li {
            @include clearfix;
            margin: 0;
            padding: 17px 10px 11px;
            display: block;
            clear: both;

            @include respond-min(768px) {
                background: none;
                float: left;
                clear: none;
                padding: 0 3% 0 0;
                width: 30%;

                &.design {

                    span.ampersand,
                    a {
                        display: inline-block;
                        vertical-align: top;

                        &.threespot {
                            clear: both;
                        }

                        &.ampersand {
                            position: relative;
                            top: 6px;
                            margin: 0 6px;
                            line-height: 36px;
                        }
                    }
                }
            }

            span.ampersand {
                line-height: 24px;
            }
        }

        span {
            display: block;
            height: 24px;
            line-height: 36px;
            padding-right: 12px;
            white-space: nowrap;
        }

        a.in-kind-donors {
            @include font-size(20);
            color: var(--primary-accent);

            &:focus {
                outline: 2px solid var(--menu);
            }
        }

        a.threespot,
        a.andrevv {
            display: block;
            height: 33px;
            overflow: hidden;
            text-indent: -200px;
            width: 94px;

            @include respond-min(768px) {
                clear: both;
                margin-top: 5px;
            }

            &.threespot {
                background: url(../img/logo-threespot.svg) no-repeat left center;
            }

            &.andrevv {
                background: url(../img/logo-andrevv.svg) no-repeat left center;
            }
        }
    }

    .copyright {

        @include font-size(12);
        clear: both;
        margin: 20px 0 0 10px;

        @include respond-min(768px) {
            max-width: 80%;
            padding-top: 30px;
            margin: 0;
        }

        a {
            color: var(--primary-accent);
        }
    }
}


//------------------- Recycleable Style Classes
.backtotop {
    // Back to top link (in base.html after block body)
    @include link-green;
    @include sans-serif;
    @include font-size(14);
    display: block;
    font-weight: 700;
    margin: 10px 0;
    padding: 10px 0;
    text-align: center;
    text-transform: uppercase;

    @include respond-min(768px) {
        display: none;
    }
}
/* ... */

